--- a/index.html
+++ b/index.html
@@ -88,8 +88,8 @@
             </nav>
             <!-- Start Header Right  -->
             <div class="header-right">
-              <a class="rn-btn" target="_blank" href="/login"
-                ><span>Portfolio</span></a
+              <a class="rn-btn" target="_blank" href="http://www.kartikcode.com"
+                ><span>Blog</span></a
               >
               <div class="hamberger-menu d-block d-xl-none">
                 <i id="menuBtn" class="feather-menu humberger-menu"></i>
