--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
               <a class="nav-link smoth-animation" href="#features">Features</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link smoth-animation" target="_blank" href="/login"
-                >Portfolio</a
+              <a class="nav-link smoth-animation" target="_blank" href="https://www.kartikcode.com"
+                >Blog</a
               >
             </li>
             <li class="nav-item">
